<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:background="@drawable/core_shape_bg_item_list"
        android:padding="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_m"
        android:elevation="6dp">
        <ImageView
            android:layout_gravity="center"
            android:id="@+id/iv_icon_sending_finished"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/core_vector_check_bold"/>
        <TextView
            android:textSize="@dimen/text_size_l"
            android:textColor="@color/text_primary"
            android:gravity="center"
            android:id="@+id/tv_receiving_finished"
            android:padding="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_file_received"/>
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_m">
            <TextView
                android:layout_gravity="center_horizontal"
                android:id="@+id/tv_cancel"
                android:text="@string/option_button_cancel"
                style="@style/DialogButtonsStyle"/>
            <TextView
                android:layout_gravity="center_horizontal"
                android:id="@+id/tv_install"
                android:text="@string/option_button_install"
                android:layout_marginStart="@dimen/margin_m"
                style="@style/DialogButtonsStyle"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
