<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/splash_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/rl_header_wizard_privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_logo_wizard_privacy"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@null"
            android:layout_marginStart="20dp"
            app:srcCompat="@drawable/vector_uptodown_logo_white"/>
        <TextView
            android:textSize="@dimen/text_size_l"
            android:textColor="@color/white"
            android:id="@+id/tv_header_title_wizard_privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/app_name"
            android:layout_toEndOf="@+id/iv_logo_wizard_privacy"
            android:layout_marginHorizontal="20dp"/>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_above="@+id/ll_buttons_bottom_gdpr"
        android:layout_below="@+id/rl_header_wizard_privacy">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/rl_content_wizard_privacy"
            android:background="@drawable/shape_bg_wizard"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginHorizontal="20dp">
            <TextView
                android:textSize="24sp"
                android:textColor="@color/text_terciary"
                android:id="@+id/tv_title_wizard_privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gdpr_title"
                android:layout_marginEnd="20dp"/>
            <TextView
                android:textSize="@dimen/text_size_m"
                android:textColor="@color/text_primary"
                android:id="@+id/tv_content_wizard_privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/gdpr_msg"/>
            <RelativeLayout
                android:id="@+id/rl_device_analysis_wizard_privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:animateLayoutChanges="true">
                <TextView
                    android:textSize="@dimen/text_size_m"
                    android:textColor="@color/text_terciary"
                    android:id="@+id/tv_title_device_analysis_wizard_privacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tracking_title_gdpr"
                    android:layout_marginEnd="12dp"/>
                <TextView
                    android:textSize="@dimen/text_size_m"
                    android:textColor="@color/text_primary"
                    android:id="@+id/tv_description_device_analysis_wizard_privacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/tracking_msg_gdpr"
                    android:layout_below="@+id/tv_title_device_analysis_wizard_privacy"
                    android:layout_marginEnd="20dp"
                    android:layout_toStartOf="@+id/s_device_analysis_wizard_privacy"/>
                <TextView
                    android:textSize="@dimen/text_size_m"
                    android:textColor="@color/text_primary"
                    android:id="@+id/tv_warning_device_analysis_wizard_privacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tracking_disabled_warning_gdpr"
                    android:layout_below="@+id/tv_description_device_analysis_wizard_privacy"
                    android:layout_marginEnd="20dp"
                    android:layout_toStartOf="@+id/s_device_analysis_wizard_privacy"/>
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/s_device_analysis_wizard_privacy"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:thumb="@drawable/selector_slide_thumb_switch"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:paddingVertical="8dp"
                    app:track="@drawable/selector_slide_track_switch"/>
                <View
                    android:background="@color/text_terciary"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/tv_warning_device_analysis_wizard_privacy"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_analytics_wizard_privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">
                <TextView
                    android:textSize="@dimen/text_size_m"
                    android:textColor="@color/text_terciary"
                    android:id="@+id/tv_title_analytics_wizard_privacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/analytics_title_gdpr"
                    android:layout_marginEnd="20dp"/>
                <TextView
                    android:textSize="@dimen/text_size_m"
                    android:textColor="@color/text_primary"
                    android:id="@+id/tv_description_analytics_wizard_privacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/analytics_msg_gdpr"
                    android:layout_below="@+id/tv_title_analytics_wizard_privacy"
                    android:layout_marginEnd="20dp"
                    android:layout_toStartOf="@+id/s_analytics_wizard_privacy"/>
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/s_analytics_wizard_privacy"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:thumb="@drawable/selector_slide_thumb_switch"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:paddingVertical="8dp"
                    app:track="@drawable/selector_slide_track_switch"/>
                <View
                    android:background="@color/text_terciary"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/tv_description_analytics_wizard_privacy"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_error_log_wizard_privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">
                <TextView
                    android:textSize="@dimen/text_size_m"
                    android:textColor="@color/text_terciary"
                    android:id="@+id/tv_title_error_log_wizard_privacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/crash_logging_title_gdpr"
                    android:layout_marginEnd="20dp"/>
                <TextView
                    android:textSize="@dimen/text_size_m"
                    android:textColor="@color/text_primary"
                    android:id="@+id/tv_description_error_log_wizard_privacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/crash_logging_msg_gdpr"
                    android:layout_below="@+id/tv_title_error_log_wizard_privacy"
                    android:layout_marginEnd="20dp"
                    android:layout_toStartOf="@+id/s_error_log_wizard_privacy"/>
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/s_error_log_wizard_privacy"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:thumb="@drawable/selector_slide_thumb_switch"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:paddingVertical="8dp"
                    app:track="@drawable/selector_slide_track_switch"/>
                <View
                    android:background="@color/text_terciary"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/tv_description_error_log_wizard_privacy"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_ads_wizard_privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">
                <TextView
                    android:textSize="@dimen/text_size_m"
                    android:textColor="@color/text_terciary"
                    android:id="@+id/tv_title_ads_wizard_privacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ads_title_gdpr"
                    android:textAllCaps="true"
                    android:layout_marginEnd="20dp"/>
                <TextView
                    android:textSize="@dimen/text_size_m"
                    android:textColor="@color/text_primary"
                    android:id="@+id/tv_description_ads_wizard_privacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/ads_msg_gdpr"
                    android:layout_below="@+id/tv_title_ads_wizard_privacy"
                    android:layout_marginEnd="20dp"/>
                <View
                    android:background="@color/text_terciary"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/tv_description_ads_wizard_privacy"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_forgotten_right_wizard_privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp">
                <TextView
                    android:textSize="@dimen/text_size_m"
                    android:textColor="@color/text_terciary"
                    android:id="@+id/tv_title_forgotten_right_wizard_privacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/right_to_be_forgotten_title_gdpr"/>
                <TextView
                    android:textSize="@dimen/text_size_m"
                    android:textColor="@color/text_primary"
                    android:id="@+id/tv_description_forgotten_right_wizard_privacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/right_to_be_forgotten_msg_gdpr"
                    android:layout_below="@+id/tv_title_forgotten_right_wizard_privacy"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll_buttons_bottom_gdpr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_l"
        android:layout_marginTop="@dimen/margin_m"
        android:layout_marginRight="@dimen/margin_l"
        android:layout_marginBottom="@dimen/margin_l"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/margin_l">
        <TextView
            android:textSize="@dimen/text_size_xl"
            android:textColor="@color/selector_wizard_back_button_text"
            android:gravity="center"
            android:id="@+id/tv_decline_all_gdpr"
            android:background="@drawable/selector_wizard_back_button"
            android:paddingLeft="@dimen/margin_s"
            android:paddingTop="@dimen/margin_m"
            android:paddingRight="@dimen/margin_s"
            android:paddingBottom="@dimen/margin_m"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/gdpr_decline_all"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:layout_marginEnd="@dimen/margin_m"
            android:paddingHorizontal="@dimen/margin_s"
            android:paddingVertical="@dimen/margin_m"/>
        <TextView
            android:textSize="@dimen/text_size_xl"
            android:textColor="@color/text_color_wizard_button"
            android:gravity="center"
            android:id="@+id/tv_accept_all_gdpr"
            android:background="@drawable/selector_wizard_accept_button"
            android:paddingLeft="@dimen/margin_s"
            android:paddingTop="@dimen/margin_m"
            android:paddingRight="@dimen/margin_s"
            android:paddingBottom="@dimen/margin_m"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/gdpr_accept_all"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:layout_marginStart="@dimen/margin_m"
            android:paddingHorizontal="@dimen/margin_s"
            android:paddingVertical="@dimen/margin_m"/>
    </LinearLayout>
</RelativeLayout>
